--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8.x'
+        python-version: '3.12'
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.3.0
       with:
-        poetry-version: '1.4.1'
+        poetry-version: '1.7.1'
     - name: Install dependencies
       run: poetry install --no-dev
     - name: Build project
