--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v3
@@ -23,12 +23,10 @@ jobs:
     - name: Install poetry
       uses: abatilo/actions-poetry@v2.3.0
       with:
-        poetry-version: 1.4.1
+        poetry-version: 1.7.1
     - name: Install project
       run: poetry install
-    - name: Run tests
-      run: poetry run pytest tests/
-    - name: Run coverage
+    - name: Run tests and coverage
       run: |
         poetry run coverage run -m pytest tests/
         poetry run coverage xml
